--- a/VSTrac/Properties/Resources.resx
+++ b/VSTrac/Properties/Resources.resx
@@ -175,4 +175,7 @@
   <data name="NodeVersions" xml:space="preserve">
     <value>Versions</value>
   </data>
+  <data name="error" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\error.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
