* Added context menu - although this is just the beginning - not using it yet  * Refactored the node classes a bit  * Removed some more automatic properties (Addresses #12)

--- a/VSTrac/TracExplorer.resx
+++ b/VSTrac/TracExplorer.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>230, 17</value>
+  </metadata>
   <metadata name="imageSmall.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
@@ -126,78 +129,78 @@
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABq
         EgAAAk1TRnQBSQFMAgEBBAEAAQkBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AMgABcQFYAUQB/wFu
-        AVQBQAH/AWoBUQE8Af8BZwFNATkB/wFkAUoBNgH/AWIBSAEyAf8BYAFFATAB/wFfAUQBLwH/AV8BRAEv
-        Af8kAAKSAdYB/wGMAY0B1AH/sAABdgFdAUoB/wHFAb0BtgH/AcgBqAGXAf8BxwGmAZUB/wHHAaUBlAH/
-        AcYBpAGSAf8BxgGjAZIB/wHGAaIBkAH/AV8BRAEvAf8kAAImAa4B/wIfAawB/wJuAckB/wLXAfAB/2AA
-        AbcBogGTAf8BXwFFATEB/wFfAUUBMQH/AV8BRQExAf8BXwFFATEB/wFfAUUBMQH/AV8BRQExAf8BXwFF
-        ATEB/wFfAUUBMQH/AV8BRQExAf8BXwFFATEB/wFfAUUBMQH/GAABgQFkAVEF/wHzAdcByQH/AfIB1QHH
-        Af8B8gHUAcUB/wEqAcwBAQH/ASoBmwEBAf8BxwGkAZQB/wFhAUcBMwH/HAACvQHmAf8EAAJfAcQB/wIf
-        AawB/wIfAawB/wImAa4B/wI2AbQB/wJAAbgB/wKEAdAB/wwAAXEBhAGPAf8BaAF2AYUB/wFcAWkBcwH/
-        AU0BWQFiAf8BPgFIAVAB/wEtATYBPQH/AR8BJgEsAf8BEgEYAR0B/wEKAQ8BFAH/AQoBDwEUAf8BCgEP
-        ARQB/wEKAQ8BFAH/AQoBDwEUAf8BCgEPARQB/wEKAQ8BFAH/DAABtwGiAZMB/wH3AeUB3AH/AbcBogGT
+        AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AMgABdAFbAUcB/wFx
+        AVcBQwH/AW0BVAE/Af8BagFQATwB/wFnAU0BOQH/AWUBSwE1Af8BYwFIATMB/wFiAUcBMgH/AWIBRwEy
+        Af8kAAKSAdYB/wGMAY0B1AH/sAABeQFgAU0B/wHFAb0BtgH/AcgBqAGXAf8BxwGmAZUB/wHHAaUBlAH/
+        AcYBpAGSAf8BxgGjAZIB/wHGAaIBkAH/AWIBRwEyAf8kAAIpAa4B/wIiAawB/wJxAckB/wLXAfAB/2AA
+        AbcBogGTAf8BYgFIATQB/wFiAUgBNAH/AWIBSAE0Af8BYgFIATQB/wFiAUgBNAH/AWIBSAE0Af8BYgFI
+        ATQB/wFiAUgBNAH/AWIBSAE0Af8BYgFIATQB/wFiAUgBNAH/GAABgQFnAVQF/wHzAdcByQH/AfIB1QHH
+        Af8B8gHUAcUB/wEtAcwBBAH/AS0BmwEEAf8BxwGkAZQB/wFkAUoBNgH/HAACvQHmAf8EAAJiAcQB/wIi
+        AawB/wIiAawB/wIpAa4B/wI5AbQB/wJDAbgB/wKEAdAB/wwAAXQBhAGPAf8BawF5AYUB/wFfAWwBdgH/
+        AVABXAFlAf8BQQFLAVMB/wEwATkBQAH/ASIBKQEvAf8BFQEbASAB/wENARIBFwH/AQ0BEgEXAf8BDQES
+        ARcB/wENARIBFwH/AQ0BEgEXAf8BDQESARcB/wENARIBFwH/DAABtwGiAZMB/wH3AeUB3AH/AbcBogGT
         Af8BtwGiAZMB/wG3AaIBkwH/AbcBogGTAf8BtwGiAZMB/wG3AaIBkwH/AbcBogGTAf8BtwGiAZMB/wG3
-        AaIBkwH/AV8BRQExAf8YAAGGAWkBVwX/AfQB2gHOAf8B9AHZAcwB/wHzAdcBygH/AQgB/wEBAf8BKgHM
-        AQEB/wHIAagBmAH/AWUBSgE2Af8YAAJYAcEB/wIfAawB/wJ5Ac4B/wQAAjYBtAH/Ah8BrAH/Ah8BrAH/
-        Ah8BrAH/AhoBqgH/AjABsgH/DAABcwGHAZIB/wGiAd8B8AH/AWwBzQHqAf8BRQG4AeIB/wEzAa4B2wH/
-        ASkBqQHZAf8BIgGhAdIB/wEdAZgBxwH/ARwBjgG8Af8BGgGDAa4B/wEVAXsBqwH/AREBeAGpAf8BFwFz
-        AZ8B/wEbAW4BlgH/ARIBGAEdAf8MAAG3AaIBkwH/AfkB6QHiAf8B+AHmAd0B/wH3AeIB2AH/AfUB3gHT
-        Af8B9AHbAc4B/wHzAdcBygH/AfIB1AHFAf8B8QHQAcEB/wHwAc0BvAH/AbcBogGTAf8BXwFFATEB/xgA
-        AYwBcAFeBf8B9QHeAdMB/wH1Ad0B0QH/AfQB2wHPAf8B9AHaAc0B/wHzAdgBzAH/AcgBqwGbAf8BagFP
-        ATsB/xQAAqUB3QH/Ah8BrAH/Ah8BrAH/AkkBvAH/BAACWAHBAf8CHwGsAf8CHwGsAf8CHwGsAf8CTwG+
-        Af8CtQHjAf8MAAF2AYoBlQH/AaoB6AH2Af8BlQHlAfwB/wGEAd8B+wH/AXEB1gH6Af8BZgHQAfcB/wFZ
-        AcYB9AH/AUwBvgHwAf8BPQG0AewB/wExAaoB6AH/AScBpAHmAf8BHAGaAd8B/wESAZAB1wH/ARcBcwGf
-        Af8BHAEjASkB/wwAAbcBogGTAf8B+QHuAegB/wH4AeoB4wH/AfgB5gHeAf8B9wHjAdkB/wH1Ad8B1QH/
-        AfUB2wHQAf8B8wHYAcsB/wHyAdUBxgH/AfEB0QHCAf8BtwGiAZMB/wFfAUUBMQH/GAABkgF2AWUF/wH2
-        AeEB2AH/AfYB4AHWAf8B9QHfAdQB/wH1Ad4B0gH/AfUB3AHRAf8ByQGuAaAB/wFuAVQBQAH/FAABqwGs
-        Ad4B/wIaAaoB/wImAa4B/wK9AeYB/wQAApsB2QH/AiYBrgH/AiYBrgH/AYwBjQHUAf8EAAJ5Ac4B/wGM
-        AY0B1AH/CAABeQGOAZgB/wGwAeoB9gH/AZ8B6QH7Af8BkgHkAfwB/wGBAd0B+wH/AXEB1gH6Af8BZAHO
-        AfcB/wFZAcYB9AH/AUkBvAHwAf8BPQG0AewB/wExAaoB6AH/ASYBowHmAf8BGQGWAdwB/wERAXgBqQH/
-        ASkBMAE3Af8MAAG3AaIBkwH/AfsB8gHtAf8B6gGaAW0B/wHqAY8BXAH/AeoBgwFLAf8B5wF0ATwB/wHe
-        AWoBMgH/AdEBYgErAf8BwQFZASYB/wHzAdUBxwH/AbcBogGTAf8BXwFFATEB/xgAAZgBgQFsBf8B9wHl
-        AdwB/wH3AeQB2gH/AfYB4gHZAf8B9gHhAdcB/wH2AeAB1QH/AcoBsAGjAf8BcwFZAUYB/xQAAc4BzwHs
-        Af8CXwHEAf8CtQHjAf8MAALJAesB/wLHAeoB/wQAApIB1gH/Ah8BrAH/Ah8BrAH/ArUB4wH/BAABgQGR
-        AZwB/wG2Ae0B+AH/AaoB7AH7Af8BmwHoAfsB/wGPAeMB/AH/AYEB3QH7Af8BbQHVAfkB/wFkAc4B9wH/
-        AVcBxQH0Af8BSQG8AfAB/wE5AbIB7AH/AS4BqQHoAf8BIAGeAeIB/wEMAYIBtAH/ATcBPwFHAf8MAAG3
+        AaIBkwH/AWIBSAE0Af8YAAGGAWwBWgX/AfQB2gHOAf8B9AHZAcwB/wHzAdcBygH/AQsB/wEEAf8BLQHM
+        AQQB/wHIAagBmAH/AWgBTQE5Af8YAAJbAcEB/wIiAawB/wJ8Ac4B/wQAAjkBtAH/AiIBrAH/AiIBrAH/
+        AiIBrAH/Ah0BqgH/AjMBsgH/DAABdgGHAZIB/wGiAd8B8AH/AW8BzQHqAf8BSAG4AeIB/wE2Aa4B2wH/
+        ASwBqQHZAf8BJQGhAdIB/wEgAZgBxwH/AR8BjgG8Af8BHQGDAa4B/wEYAX4BqwH/ARQBewGpAf8BGgF2
+        AZ8B/wEeAXEBlgH/ARUBGwEgAf8MAAG3AaIBkwH/AfkB6QHiAf8B+AHmAd0B/wH3AeIB2AH/AfUB3gHT
+        Af8B9AHbAc4B/wHzAdcBygH/AfIB1AHFAf8B8QHQAcEB/wHwAc0BvAH/AbcBogGTAf8BYgFIATQB/xgA
+        AYwBcwFhBf8B9QHeAdMB/wH1Ad0B0QH/AfQB2wHPAf8B9AHaAc0B/wHzAdgBzAH/AcgBqwGbAf8BbQFS
+        AT4B/xQAAqUB3QH/AiIBrAH/AiIBrAH/AkwBvAH/BAACWwHBAf8CIgGsAf8CIgGsAf8CIgGsAf8CUgG+
+        Af8CtQHjAf8MAAF5AYoBlQH/AaoB6AH2Af8BlQHlAfwB/wGEAd8B+wH/AXQB1gH6Af8BaQHQAfcB/wFc
+        AcYB9AH/AU8BvgHwAf8BQAG0AewB/wE0AaoB6AH/ASoBpAHmAf8BHwGaAd8B/wEVAZAB1wH/ARoBdgGf
+        Af8BHwEmASwB/wwAAbcBogGTAf8B+QHuAegB/wH4AeoB4wH/AfgB5gHeAf8B9wHjAdkB/wH1Ad8B1QH/
+        AfUB2wHQAf8B8wHYAcsB/wHyAdUBxgH/AfEB0QHCAf8BtwGiAZMB/wFiAUgBNAH/GAABkgF5AWgF/wH2
+        AeEB2AH/AfYB4AHWAf8B9QHfAdQB/wH1Ad4B0gH/AfUB3AHRAf8ByQGuAaAB/wFxAVcBQwH/FAABqwGs
+        Ad4B/wIdAaoB/wIpAa4B/wK9AeYB/wQAApsB2QH/AikBrgH/AikBrgH/AYwBjQHUAf8EAAJ8Ac4B/wGM
+        AY0B1AH/CAABfAGOAZgB/wGwAeoB9gH/AZ8B6QH7Af8BkgHkAfwB/wGBAd0B+wH/AXQB1gH6Af8BZwHO
+        AfcB/wFcAcYB9AH/AUwBvAHwAf8BQAG0AewB/wE0AaoB6AH/ASkBowHmAf8BHAGWAdwB/wEUAXsBqQH/
+        ASwBMwE6Af8MAAG3AaIBkwH/AfsB8gHtAf8B6gGaAXAB/wHqAY8BXwH/AeoBgwFOAf8B5wF3AT8B/wHe
+        AW0BNQH/AdEBZQEuAf8BwQFcASkB/wHzAdUBxwH/AbcBogGTAf8BYgFIATQB/xgAAZgBgQFvBf8B9wHl
+        AdwB/wH3AeQB2gH/AfYB4gHZAf8B9gHhAdcB/wH2AeAB1QH/AcoBsAGjAf8BdgFcAUkB/xQAAc4BzwHs
+        Af8CYgHEAf8CtQHjAf8MAALJAesB/wLHAeoB/wQAApIB1gH/AiIBrAH/AiIBrAH/ArUB4wH/BAABgQGR
+        AZwB/wG2Ae0B+AH/AaoB7AH7Af8BmwHoAfsB/wGPAeMB/AH/AYEB3QH7Af8BcAHVAfkB/wFnAc4B9wH/
+        AVoBxQH0Af8BTAG8AfAB/wE8AbIB7AH/ATEBqQHoAf8BIwGeAeIB/wEPAYIBtAH/AToBQgFKAf8MAAG3
         AaIBkwH/AfwB9gHzAf8B+wHyAe4B/wH7Ae8B6gH/AfkB6wHmAf8B+QHoAeEB/wH3AeUB2wH/AfYB4QHX
-        Af8B9AHeAdMB/wHzAdoBzQH/AbcBogGTAf8BXwFFATEB/xgAAZ4BhwFzGf8B8wHvAewB/wF4AV8BTAH/
-        EAABZgFnAcUB/wFmAWcBxQH/BAABjAGNAdQB/wIwAbIB/wJJAbwB/wgAAt0B8gH/BAAChAHQAf8CHwGs
-        Af8CHwGsAf8CXwHEAf8EAAGDAZUBnwH/Ab4B8AH5Af8BqwHwAfcB/wGlAewB+wH/AZgB5wH7Af8BiQHh
-        AfwB/wF7Ad0B+wH/AW0B1QH5Af8BYQHNAfcB/wFUAcQB8wH/AUcBuwHwAf8BOQGyAewB/wEoAaQB4wH/
-        AQgBigG/Af8BRQFPAVgB/wwAAboBpQGWAf8B/QH5AfYB/wHqAZkBbgH/AeoBjwFdAf8B6gGDAUsB/wHn
-        AXQBPAH/Ad4BawEyAf8B0gFiASsB/wHBAVkBJwH/AfUB3wHTAf8BtwGiAZMB/wFfAUUBMQH/GAABpAGO
-        AXoB/wHMAboBrQH/AbcBogGTAf8BrwGaAYsB/wGnAZEBgQH/AZ8BiQF1Af8BmAGBAWwB/wGRAXYBZQH/
-        AYEBZQFSAf8QAAGrAawB3gH/AtcB8AH/Am4ByQH/Ah8BrAH/Ah8BrAH/AkABuAH/BAACeQHOAf8CJgGu
-        Af8BqwGsAd4B/wLdAfIB/wImAa4B/wIfAawB/wGrAawB3gH/BAABhgGZAaMB/wG+AfAB+QH/AbYB7QH4
-        Af8BsAHuAfoB/wGkAesB+gH/AZUB5gH7Af8BiQHhAfwB/wF5AdwB/AH/AW0B1QH5Af8BYQHNAfcB/wFU
-        AcQB8wH/AUUBuQHvAf8BMQGpAecB/wEIAY8BxwH/AVMBXwFnAf8MAAG+AakBmgH/Af4B/AH7Af8B/QH5
+        Af8B9AHeAdMB/wHzAdoBzQH/AbcBogGTAf8BYgFIATQB/xgAAZ4BhwF2Gf8B8wHvAewB/wF7AWIBTwH/
+        EAABaQFqAcUB/wFpAWoBxQH/BAABjAGNAdQB/wIzAbIB/wJMAbwB/wgAAt0B8gH/BAAChAHQAf8CIgGs
+        Af8CIgGsAf8CYgHEAf8EAAGDAZUBnwH/Ab4B8AH5Af8BqwHwAfcB/wGlAewB+wH/AZgB5wH7Af8BiQHh
+        AfwB/wF+Ad0B+wH/AXAB1QH5Af8BZAHNAfcB/wFXAcQB8wH/AUoBuwHwAf8BPAGyAewB/wErAaQB4wH/
+        AQsBigG/Af8BSAFSAVsB/wwAAboBpQGWAf8B/QH5AfYB/wHqAZkBcQH/AeoBjwFgAf8B6gGDAU4B/wHn
+        AXcBPwH/Ad4BbgE1Af8B0gFlAS4B/wHBAVwBKgH/AfUB3wHTAf8BtwGiAZMB/wFiAUgBNAH/GAABpAGO
+        AX0B/wHMAboBrQH/AbcBogGTAf8BrwGaAYsB/wGnAZEBgQH/AZ8BiQF4Af8BmAGBAW8B/wGRAXkBaAH/
+        AYEBaAFVAf8QAAGrAawB3gH/AtcB8AH/AnEByQH/AiIBrAH/AiIBrAH/AkMBuAH/BAACfAHOAf8CKQGu
+        Af8BqwGsAd4B/wLdAfIB/wIpAa4B/wIiAawB/wGrAawB3gH/BAABhgGZAaMB/wG+AfAB+QH/AbYB7QH4
+        Af8BsAHuAfoB/wGkAesB+gH/AZUB5gH7Af8BiQHhAfwB/wF8AdwB/AH/AXAB1QH5Af8BZAHNAfcB/wFX
+        AcQB8wH/AUgBuQHvAf8BNAGpAecB/wELAY8BxwH/AVYBYgFqAf8MAAG+AakBmgH/Af4B/AH7Af8B/QH5
         AfgB/wH9AfcB9AH/AfwB9AHwAf8B+wHxAe0B/wH6Ae4B6AH/AfgB6gHkAf8B9wHnAd8B/wH2AeIB2gH/
-        AbcBogGTAf8BXwFFATEB/xgAAakBlAGFBf8B+wHwAesB/wH6Ae8B6QH/AfoB7QHoAf8B+QHsAeYB/wH5
-        AesB5AH/Ac0BuQGuAf8BhwFrAVkB/xQAAt0B8gH/AiYBrgH/Ah8BrAH/Ah8BrAH/ArUB4wH/AuQB9QH/
-        AiYBrgH/AhoBqgH/AkABuAH/BAACpQHdAf8CpQHdAf8IAAGJAZwBpgH/Ab4B8AH5Af8BtgHtAfgB/wG2
-        Ae0B+AH/AasB8AH3Af8BogHsAfoB/wGVAeYB+wH/AYkB4QH8Af8BeQHcAfwB/wFrAdMB+gH/AV8BzAH3
-        Af8BUQHDAfMB/wFFAbkB7wH/ARUBmQHPAf8BXwFsAXYB/wwAAcMBrgGeAf8D/gH/AeoBmgFtAf8B6gGP
-        AVwB/wHqAYQBSwH/AeYBdAE7Af8B3wFrATIB/wHSAWIBLAH/AcEBWQEmAf8B+AHoAd8B/wG3AaIBkwH/
-        AV8BRQExAf8YAAGwAZsBjBn/AfMB7wHsAf8BjgFyAWAB/xgAAjYBtAH/AhoBqgH/AjYBtAH/BAABqwGs
-        Ad4B/wIfAawB/wIfAawB/wImAa4B/wQAAoQB0AH/ApsB2QH/CAABiwGgAagB/wG+AfAB+QH/Ab4B8AH5
-        Af8BvgHwAfkB/wG+AfAB+QH/AbQB8gH4Af8BqgHsAfsB/wGgAekB+wH/AZUB5QH8Af8BigHfAfwB/wF7
-        AdgB+wH/AXAB0gH4Af8BZAHKAfQB/wFZAcAB8QH/AV8BbAF2Af8MAAHIAbIBowr/Af0B/AH/Af0B+wH5
-        Af8B/QH5AfYB/wH8AfUB8gH/AfsB8gHuAf8B+wHvAeoB/wH5AewB5gH/AbcBogGTAf8BXwFFATEB/xgA
+        AbcBogGTAf8BYgFIATQB/xgAAakBlAGFBf8B+wHwAesB/wH6Ae8B6QH/AfoB7QHoAf8B+QHsAeYB/wH5
+        AesB5AH/Ac0BuQGuAf8BhwFuAVwB/xQAAt0B8gH/AikBrgH/AiIBrAH/AiIBrAH/ArUB4wH/AuQB9QH/
+        AikBrgH/Ah0BqgH/AkMBuAH/BAACpQHdAf8CpQHdAf8IAAGJAZwBpgH/Ab4B8AH5Af8BtgHtAfgB/wG2
+        Ae0B+AH/AasB8AH3Af8BogHsAfoB/wGVAeYB+wH/AYkB4QH8Af8BfAHcAfwB/wFuAdMB+gH/AWIBzAH3
+        Af8BVAHDAfMB/wFIAbkB7wH/ARgBmQHPAf8BYgFvAXkB/wwAAcMBrgGeAf8D/gH/AeoBmgFwAf8B6gGP
+        AV8B/wHqAYQBTgH/AeYBdwE+Af8B3wFuATUB/wHSAWUBLwH/AcEBXAEpAf8B+AHoAd8B/wG3AaIBkwH/
+        AWIBSAE0Af8YAAGwAZsBjBn/AfMB7wHsAf8BjgF1AWMB/xgAAjkBtAH/Ah0BqgH/AjkBtAH/BAABqwGs
+        Ad4B/wIiAawB/wIiAawB/wIpAa4B/wQAAoQB0AH/ApsB2QH/CAABiwGgAagB/wG+AfAB+QH/Ab4B8AH5
+        Af8BvgHwAfkB/wG+AfAB+QH/AbQB8gH4Af8BqgHsAfsB/wGgAekB+wH/AZUB5QH8Af8BigHfAfwB/wF+
+        AdgB+wH/AXMB0gH4Af8BZwHKAfQB/wFcAcAB8QH/AWIBbwF5Af8MAAHIAbIBowr/Af0B/AH/Af0B+wH5
+        Af8B/QH5AfYB/wH8AfUB8gH/AfsB8gHuAf8B+wHvAeoB/wH5AewB5gH/AbcBogGTAf8BYgFIATQB/xgA
         AbUBoQGSAf8BzAG6Aa0B/wHEAbABogH/Ab0BqQGbAf8BtgGiAZIB/wGuAZkBigH/AaYBkQGBAf8BnwGI
-        AXQB/wGUAXgBZgH/GAABqwGsAd4B/wJfAcQB/wLJAesB/wQAAqUB3QH/Ah8BrAH/Ah8BrAH/AjYBtAH/
+        AXcB/wGUAXsBaQH/GAABqwGsAd4B/wJiAcQB/wLJAesB/wQAAqUB3QH/AiIBrAH/AiIBrAH/AjkBtAH/
         BAACtQHjAf8BzgHPAewB/wgAAY0BoQGqAf8BjQGhAaoB/wGNAaEBqgH/AY0BoQGqAf8BjQGhAaoB/wGL
         AZ8BqAH/AYkBnAGmAf8BiQGbAaYB/wGHAZoBpAH/AYYBmQGjAf8BhAGWAaAB/wGEAZYBoAH/AYMBlQGg
-        Af8BgwGVAaAB/wFxAYQBjwH/DAABzAG2AacF/wHqAZoBbgH/AeoBjgFcAf8B6gGDAUsB/wHmAXQBPAH/
-        Ad4BagEyAf8B/AH2AfMB/wH7AfQB7wH/AbcBogGTAf8BtwGiAZMB/wFgAUYBMgH/GAABuwGmAZcF/wH7
-        AfIB7gH/AfkB6wHlAf8B+AHlAdwB/wH1Ad8B1AH/AfMB1wHLAf8B1QG0AaQB/wGaAYMBbgH/GAACNgG0
-        Af8C3QHyAf8MAAJfAcQB/wJAAbgB/wK9AeYB/xQAAY8BpAGsAf8BsgHkAewB/wG2Ae0B+AH/AbYB7QH4
+        Af8BgwGVAaAB/wF0AYQBjwH/DAABzAG2AacF/wHqAZoBcQH/AeoBjgFfAf8B6gGDAU4B/wHmAXcBPwH/
+        Ad4BbQE1Af8B/AH2AfMB/wH7AfQB7wH/AbcBogGTAf8BtwGiAZMB/wFjAUkBNQH/GAABuwGmAZcF/wH7
+        AfIB7gH/AfkB6wHlAf8B+AHlAdwB/wH1Ad8B1AH/AfMB1wHLAf8B1QG0AaQB/wGaAYMBcQH/GAACOQG0
+        Af8C3QHyAf8MAAJiAcQB/wJDAbgB/wK9AeYB/xQAAY8BpAGsAf8BsgHkAewB/wG2Ae0B+AH/AbYB7QH4
         Af8BqQHsAfYB/wGSAeEB8wH/AY0BoQGqAf8B1QHcAeAB/ygAAdEBuwGrEv8B/gH9Af8B/gL7Af8B/QH5
-        AfgB/wG3AaIBkwH/AWABRgEyAf8BYAFGATIB/wFgAUYBMgH/GAABwwGvAaIB/wP8Ff8B8wHvAewB/wGm
+        AfgB/wG3AaIBkwH/AWMBSQE1Af8BYwFJATUB/wFjAUkBNQH/GAABwwGvAaIB/wP8Ff8B8wHvAewB/wGm
         AZABgQH/GAACvQHmAf8QAAK9AeYB/wHOAc8B7AH/GAAB2gHeAeEB/wGPAaQBrAH/AY8BpAGsAf8BjwGk
         AawB/wGPAaQBrAH/AY8BpAGsAf8B1QHcAeAB/ywAAdUBvwGvFv8C/gH/Af4B/AH7Af8BuQGkAZUB/wHU
-        AcUBugH/AV8BRQExAf8BwQGyAacB/xgAAccBswGmAf8BxAGxAaMB/wHBAa4BoAH/Ab4BqwGcAf8BuwGn
-        AZgB/wG4AaMBlQH/AbQBnwGQAf8BrwGaAYwB/wGrAZYBhwH/LAACMAGyAf8CsgHiAf9gAAHYAcIBshv/
-        Af4B/wHAAasBnAH/AV8BRQExAf8BwgGzAacB/2wAApsB2QH/ZAAB2AHCAbIB/wHYAcIBsgH/AdgBwgGy
+        AcUBugH/AWIBSAE0Af8BwQGyAacB/xgAAccBswGmAf8BxAGxAaMB/wHBAa4BoAH/Ab4BqwGcAf8BuwGn
+        AZgB/wG4AaMBlQH/AbQBnwGQAf8BrwGaAYwB/wGrAZYBhwH/LAACMwGyAf8CsgHiAf9gAAHYAcIBshv/
+        Af4B/wHAAasBnAH/AWIBSAE0Af8BwgGzAacB/2wAApsB2QH/ZAAB2AHCAbIB/wHYAcIBsgH/AdgBwgGy
         Af8B2AHCAbIB/wHYAcIBsgH/AdgBwgGyAf8B1AG+Aa4B/wHPAbkBqQH/AckBswGkAf8B4gHWAc0B/xAA
         AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAHwAQcB/AX/AfABBwH8AT8C/wHA
         AQMB8AEHAfQBBwEAAQEBwAEDAfABBwHiAQcBAAEBAcABAwHwAQcBwgEHAQABAQHAAQMB8AEHAcIBEwEA
@@ -213,21 +216,18 @@
   <data name="btnNewTracServer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAlNJREFUOE+F0l1M
-        UmEYB3C6b922Lppba80rVqt0a2t9Xlg2tZzNrbgorUEta66SmDmxLftgjC8JtQUDlBoDuiAyzXA1QQRr
-        lSiggRTHj7QQ+RBw+O+cs3UBudN7c/a82//3Ps/7nk0+c3HP1u3boluKSncG+w3HdhytHEr/nnIRgVB2
-        1xlfG+t/K+uvFEyY96wjJsKP97VATILgKzbcQ214anwHlWEAHbo+SNRWiLosaFcakWfmfvL7EFcCa07E
-        CRP5/QC6jqpRuJaicbRKevMBv6ZoLWyvRmLeghyWkVq0gqojA/tBLGYwTaQxHkrCPRmH3upF472uDTqI
-        yYG0nUaoTkDWhF+M7heDkGlteNRphlDaC/4DNa40K/KBbKCK7zXtXs8t3MWsgwMsyxGysZGZ02w4Qv1t
-        ccEIlmJl1H1EkSO4b+fsJZmQrxOpGSnCrhYsRLOY/5XF7FIGEXIc85sxcK635wOFr9Qi1sPU74Fc+xqP
-        yVsXSg2481CNG0IVeAIpzvKEzEBT+7N/Wv+7Qb1CVV0zM0CdRK1pYhWByCr831OYDKfgnUlB93IUJzlN
-        zABPIKMBHxmaIEPUE34JJvF5OgmN2YXjtY3MwMWbIhr4SoW+JfFpKoGxQAIeXxzdxhEcqm5gBs5du08D
-        H6mQP4FR8gdiYTNYHjZUz0dwoILHDNRwW2nARQad3hUMj6/QYVY3Gwq9E6Xll5iBigsC2AaH8YQ8raPX
-        CUWPEzK9AzKdAxKtA3vL6piBsvO36Is6XNOAg6evki1zUXLqMvadqKfDhcAfNlX/vgOuJ94AAAAASUVO
-        RK5CYII=
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAlRJREFUOE+F0l1M
+        UmEYB3C6b922Lppba80rVqt0a2vVqs2yqeVsbsVFaQ1qWXOVxMyJbdEHc3xJKC0cIFRM6MLQMsPVBBGs
+        pZKABFocP9JC5EPA4b9zztYF5E7vzdnzbv/f+zzvezZ5zYVdW7dvi2wpKN4Z7DUe3XG8fDD1e8pJ+EOZ
+        XWe8Laz/rYyvXDBu2rOOqBg/PlQDUQmCr9lwDbbgqek9VMZ+tOn6INH0QNxhgUhpQo6Z/cnvQ0wJrDkQ
+        I7rJ70fQdUSD/LUUiaFZYsgFfJqCtRlbJeLzFmSxjORiD6g63L8fxGIaASKFiVACrskY9D0e1N/r2KCD
+        qBxI2WiE6gRkTfhaoX4xAJnWikftZgilBvAfaHClUZELZPwV/LGXu9ezC3cxa+cAy3KErGyk5zo3HKH2
+        dmveCJZCZcR1RJEluO/mbEXpkLcdyWkpZpxNWIhkMP8rg9mlNMLkOOY3o+BcF+UC+a/U1KpH91s35Npe
+        PCZvXSg14s5DDW4IVeAJpDjLEzIDDaJn/7T+d4N6hYqaRmaAOolaAWIV/vAqfN+TmJxJwjOdhO7VCE5y
+        GpgBnkBGA14y9JUMUU84FkzgSyCBTrMTx6rrmYGLN8U0ME6FviXweSqOUX8cbm8MatMwDlXWMQPnrt2n
+        gU9UyBfHCPkDsbAZLDcbqufDOFDGYwaquM004CSDDs8KhiZW6DBLzYZC70Bx6SVmoOyCANaBITwhT2sz
+        OKDockCmt0Oms0OitWNvSQ0zUHL+Fn1Rh6vqcPD0VbJlLopOXca+E7V0OB/4Awuk/7HqHwmNAAAAAElF
+        TkSuQmCC
 </value>
   </data>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>230, 17</value>
-  </metadata>
 </root>
