* Added context menus to the Servers and Server nodes  * Added remove server functionality (closes #2)  * Added refreshing functionality to servers

--- a/VSTrac/TracExplorer.resx
+++ b/VSTrac/TracExplorer.resx
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>230, 17</value>
+  <metadata name="ctmServers.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>332, 17</value>
   </metadata>
   <metadata name="imageSmall.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
@@ -129,78 +129,78 @@
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABq
         EgAAAk1TRnQBSQFMAgEBBAEAAQkBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AMgABdAFbAUcB/wFx
-        AVcBQwH/AW0BVAE/Af8BagFQATwB/wFnAU0BOQH/AWUBSwE1Af8BYwFIATMB/wFiAUcBMgH/AWIBRwEy
-        Af8kAAKSAdYB/wGMAY0B1AH/sAABeQFgAU0B/wHFAb0BtgH/AcgBqAGXAf8BxwGmAZUB/wHHAaUBlAH/
-        AcYBpAGSAf8BxgGjAZIB/wHGAaIBkAH/AWIBRwEyAf8kAAIpAa4B/wIiAawB/wJxAckB/wLXAfAB/2AA
-        AbcBogGTAf8BYgFIATQB/wFiAUgBNAH/AWIBSAE0Af8BYgFIATQB/wFiAUgBNAH/AWIBSAE0Af8BYgFI
-        ATQB/wFiAUgBNAH/AWIBSAE0Af8BYgFIATQB/wFiAUgBNAH/GAABgQFnAVQF/wHzAdcByQH/AfIB1QHH
-        Af8B8gHUAcUB/wEtAcwBBAH/AS0BmwEEAf8BxwGkAZQB/wFkAUoBNgH/HAACvQHmAf8EAAJiAcQB/wIi
-        AawB/wIiAawB/wIpAa4B/wI5AbQB/wJDAbgB/wKEAdAB/wwAAXQBhAGPAf8BawF5AYUB/wFfAWwBdgH/
-        AVABXAFlAf8BQQFLAVMB/wEwATkBQAH/ASIBKQEvAf8BFQEbASAB/wENARIBFwH/AQ0BEgEXAf8BDQES
-        ARcB/wENARIBFwH/AQ0BEgEXAf8BDQESARcB/wENARIBFwH/DAABtwGiAZMB/wH3AeUB3AH/AbcBogGT
+        AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AMgABewFiAU4B/wF4
+        AV4BSgH/AXQBWwFGAf8BcQFXAUMB/wFuAVQBQAH/AWwBUgE8Af8BagFPAToB/wFpAU4BOQH/AWkBTgE5
+        Af8kAAKSAdYB/wGMAY0B1AH/sAABgAFnAVQB/wHFAb0BtgH/AcgBqAGXAf8BxwGmAZUB/wHHAaUBlAH/
+        AcYBpAGSAf8BxgGjAZIB/wHGAaIBkAH/AWkBTgE5Af8kAAIwAa4B/wIpAawB/wJ4AckB/wLXAfAB/2AA
+        AbcBogGTAf8BaQFPATsB/wFpAU8BOwH/AWkBTwE7Af8BaQFPATsB/wFpAU8BOwH/AWkBTwE7Af8BaQFP
+        ATsB/wFpAU8BOwH/AWkBTwE7Af8BaQFPATsB/wFpAU8BOwH/GAABgQFuAVsF/wHzAdcByQH/AfIB1QHH
+        Af8B8gHUAcUB/wE0AcwBCwH/ATQBmwELAf8BxwGkAZQB/wFrAVEBPQH/HAACvQHmAf8EAAJpAcQB/wIp
+        AawB/wIpAawB/wIwAa4B/wJAAbQB/wJKAbgB/wKEAdAB/wwAAXsBhAGPAf8BcgGAAYUB/wFmAXMBfQH/
+        AVcBYwFsAf8BSAFSAVoB/wE3AUABRwH/ASkBMAE2Af8BHAEiAScB/wEUARkBHgH/ARQBGQEeAf8BFAEZ
+        AR4B/wEUARkBHgH/ARQBGQEeAf8BFAEZAR4B/wEUARkBHgH/DAABtwGiAZMB/wH3AeUB3AH/AbcBogGT
         Af8BtwGiAZMB/wG3AaIBkwH/AbcBogGTAf8BtwGiAZMB/wG3AaIBkwH/AbcBogGTAf8BtwGiAZMB/wG3
-        AaIBkwH/AWIBSAE0Af8YAAGGAWwBWgX/AfQB2gHOAf8B9AHZAcwB/wHzAdcBygH/AQsB/wEEAf8BLQHM
-        AQQB/wHIAagBmAH/AWgBTQE5Af8YAAJbAcEB/wIiAawB/wJ8Ac4B/wQAAjkBtAH/AiIBrAH/AiIBrAH/
-        AiIBrAH/Ah0BqgH/AjMBsgH/DAABdgGHAZIB/wGiAd8B8AH/AW8BzQHqAf8BSAG4AeIB/wE2Aa4B2wH/
-        ASwBqQHZAf8BJQGhAdIB/wEgAZgBxwH/AR8BjgG8Af8BHQGDAa4B/wEYAX4BqwH/ARQBewGpAf8BGgF2
-        AZ8B/wEeAXEBlgH/ARUBGwEgAf8MAAG3AaIBkwH/AfkB6QHiAf8B+AHmAd0B/wH3AeIB2AH/AfUB3gHT
-        Af8B9AHbAc4B/wHzAdcBygH/AfIB1AHFAf8B8QHQAcEB/wHwAc0BvAH/AbcBogGTAf8BYgFIATQB/xgA
-        AYwBcwFhBf8B9QHeAdMB/wH1Ad0B0QH/AfQB2wHPAf8B9AHaAc0B/wHzAdgBzAH/AcgBqwGbAf8BbQFS
-        AT4B/xQAAqUB3QH/AiIBrAH/AiIBrAH/AkwBvAH/BAACWwHBAf8CIgGsAf8CIgGsAf8CIgGsAf8CUgG+
-        Af8CtQHjAf8MAAF5AYoBlQH/AaoB6AH2Af8BlQHlAfwB/wGEAd8B+wH/AXQB1gH6Af8BaQHQAfcB/wFc
-        AcYB9AH/AU8BvgHwAf8BQAG0AewB/wE0AaoB6AH/ASoBpAHmAf8BHwGaAd8B/wEVAZAB1wH/ARoBdgGf
-        Af8BHwEmASwB/wwAAbcBogGTAf8B+QHuAegB/wH4AeoB4wH/AfgB5gHeAf8B9wHjAdkB/wH1Ad8B1QH/
-        AfUB2wHQAf8B8wHYAcsB/wHyAdUBxgH/AfEB0QHCAf8BtwGiAZMB/wFiAUgBNAH/GAABkgF5AWgF/wH2
-        AeEB2AH/AfYB4AHWAf8B9QHfAdQB/wH1Ad4B0gH/AfUB3AHRAf8ByQGuAaAB/wFxAVcBQwH/FAABqwGs
-        Ad4B/wIdAaoB/wIpAa4B/wK9AeYB/wQAApsB2QH/AikBrgH/AikBrgH/AYwBjQHUAf8EAAJ8Ac4B/wGM
-        AY0B1AH/CAABfAGOAZgB/wGwAeoB9gH/AZ8B6QH7Af8BkgHkAfwB/wGBAd0B+wH/AXQB1gH6Af8BZwHO
-        AfcB/wFcAcYB9AH/AUwBvAHwAf8BQAG0AewB/wE0AaoB6AH/ASkBowHmAf8BHAGWAdwB/wEUAXsBqQH/
-        ASwBMwE6Af8MAAG3AaIBkwH/AfsB8gHtAf8B6gGaAXAB/wHqAY8BXwH/AeoBgwFOAf8B5wF3AT8B/wHe
-        AW0BNQH/AdEBZQEuAf8BwQFcASkB/wHzAdUBxwH/AbcBogGTAf8BYgFIATQB/xgAAZgBgQFvBf8B9wHl
-        AdwB/wH3AeQB2gH/AfYB4gHZAf8B9gHhAdcB/wH2AeAB1QH/AcoBsAGjAf8BdgFcAUkB/xQAAc4BzwHs
-        Af8CYgHEAf8CtQHjAf8MAALJAesB/wLHAeoB/wQAApIB1gH/AiIBrAH/AiIBrAH/ArUB4wH/BAABgQGR
-        AZwB/wG2Ae0B+AH/AaoB7AH7Af8BmwHoAfsB/wGPAeMB/AH/AYEB3QH7Af8BcAHVAfkB/wFnAc4B9wH/
-        AVoBxQH0Af8BTAG8AfAB/wE8AbIB7AH/ATEBqQHoAf8BIwGeAeIB/wEPAYIBtAH/AToBQgFKAf8MAAG3
+        AaIBkwH/AWkBTwE7Af8YAAGGAXMBYQX/AfQB2gHOAf8B9AHZAcwB/wHzAdcBygH/ARIB/wELAf8BNAHM
+        AQsB/wHIAagBmAH/AW8BVAFAAf8YAAJiAcEB/wIpAawB/wKBAc4B/wQAAkABtAH/AikBrAH/AikBrAH/
+        AikBrAH/AiQBqgH/AjoBsgH/DAABfQGHAZIB/wGiAd8B8AH/AXYBzQHqAf8BTwG4AeIB/wE9Aa4B2wH/
+        ATMBqQHZAf8BLAGhAdIB/wEnAZgBxwH/ASYBjgG8Af8BJAGDAa4B/wEfAYEBqwH/ARsBgQGpAf8BIQF9
+        AZ8B/wElAXgBlgH/ARwBIgEnAf8MAAG3AaIBkwH/AfkB6QHiAf8B+AHmAd0B/wH3AeIB2AH/AfUB3gHT
+        Af8B9AHbAc4B/wHzAdcBygH/AfIB1AHFAf8B8QHQAcEB/wHwAc0BvAH/AbcBogGTAf8BaQFPATsB/xgA
+        AYwBegFoBf8B9QHeAdMB/wH1Ad0B0QH/AfQB2wHPAf8B9AHaAc0B/wHzAdgBzAH/AcgBqwGbAf8BdAFZ
+        AUUB/xQAAqUB3QH/AikBrAH/AikBrAH/AlMBvAH/BAACYgHBAf8CKQGsAf8CKQGsAf8CKQGsAf8CWQG+
+        Af8CtQHjAf8MAAGAAYoBlQH/AaoB6AH2Af8BlQHlAfwB/wGEAd8B+wH/AXsB1gH6Af8BcAHQAfcB/wFj
+        AcYB9AH/AVYBvgHwAf8BRwG0AewB/wE7AaoB6AH/ATEBpAHmAf8BJgGaAd8B/wEcAZAB1wH/ASEBfQGf
+        Af8BJgEtATMB/wwAAbcBogGTAf8B+QHuAegB/wH4AeoB4wH/AfgB5gHeAf8B9wHjAdkB/wH1Ad8B1QH/
+        AfUB2wHQAf8B8wHYAcsB/wHyAdUBxgH/AfEB0QHCAf8BtwGiAZMB/wFpAU8BOwH/GAABkgGAAW8F/wH2
+        AeEB2AH/AfYB4AHWAf8B9QHfAdQB/wH1Ad4B0gH/AfUB3AHRAf8ByQGuAaAB/wF4AV4BSgH/FAABqwGs
+        Ad4B/wIkAaoB/wIwAa4B/wK9AeYB/wQAApsB2QH/AjABrgH/AjABrgH/AYwBjQHUAf8EAAKBAc4B/wGM
+        AY0B1AH/CAABgQGOAZgB/wGwAeoB9gH/AZ8B6QH7Af8BkgHkAfwB/wGBAd0B+wH/AXsB1gH6Af8BbgHO
+        AfcB/wFjAcYB9AH/AVMBvAHwAf8BRwG0AewB/wE7AaoB6AH/ATABowHmAf8BIwGWAdwB/wEbAYEBqQH/
+        ATMBOgFBAf8MAAG3AaIBkwH/AfsB8gHtAf8B6gGaAXcB/wHqAY8BZgH/AeoBgwFVAf8B5wF+AUYB/wHe
+        AXQBPAH/AdEBbAE1Af8BwQFjATAB/wHzAdUBxwH/AbcBogGTAf8BaQFPATsB/xgAAZgBgQF2Bf8B9wHl
+        AdwB/wH3AeQB2gH/AfYB4gHZAf8B9gHhAdcB/wH2AeAB1QH/AcoBsAGjAf8BfQFjAVAB/xQAAc4BzwHs
+        Af8CaQHEAf8CtQHjAf8MAALJAesB/wLHAeoB/wQAApIB1gH/AikBrAH/AikBrAH/ArUB4wH/BAABgQGR
+        AZwB/wG2Ae0B+AH/AaoB7AH7Af8BmwHoAfsB/wGPAeMB/AH/AYEB3QH7Af8BdwHVAfkB/wFuAc4B9wH/
+        AWEBxQH0Af8BUwG8AfAB/wFDAbIB7AH/ATgBqQHoAf8BKgGeAeIB/wEWAYIBtAH/AUEBSQFRAf8MAAG3
         AaIBkwH/AfwB9gHzAf8B+wHyAe4B/wH7Ae8B6gH/AfkB6wHmAf8B+QHoAeEB/wH3AeUB2wH/AfYB4QHX
-        Af8B9AHeAdMB/wHzAdoBzQH/AbcBogGTAf8BYgFIATQB/xgAAZ4BhwF2Gf8B8wHvAewB/wF7AWIBTwH/
-        EAABaQFqAcUB/wFpAWoBxQH/BAABjAGNAdQB/wIzAbIB/wJMAbwB/wgAAt0B8gH/BAAChAHQAf8CIgGs
-        Af8CIgGsAf8CYgHEAf8EAAGDAZUBnwH/Ab4B8AH5Af8BqwHwAfcB/wGlAewB+wH/AZgB5wH7Af8BiQHh
-        AfwB/wF+Ad0B+wH/AXAB1QH5Af8BZAHNAfcB/wFXAcQB8wH/AUoBuwHwAf8BPAGyAewB/wErAaQB4wH/
-        AQsBigG/Af8BSAFSAVsB/wwAAboBpQGWAf8B/QH5AfYB/wHqAZkBcQH/AeoBjwFgAf8B6gGDAU4B/wHn
-        AXcBPwH/Ad4BbgE1Af8B0gFlAS4B/wHBAVwBKgH/AfUB3wHTAf8BtwGiAZMB/wFiAUgBNAH/GAABpAGO
-        AX0B/wHMAboBrQH/AbcBogGTAf8BrwGaAYsB/wGnAZEBgQH/AZ8BiQF4Af8BmAGBAW8B/wGRAXkBaAH/
-        AYEBaAFVAf8QAAGrAawB3gH/AtcB8AH/AnEByQH/AiIBrAH/AiIBrAH/AkMBuAH/BAACfAHOAf8CKQGu
-        Af8BqwGsAd4B/wLdAfIB/wIpAa4B/wIiAawB/wGrAawB3gH/BAABhgGZAaMB/wG+AfAB+QH/AbYB7QH4
-        Af8BsAHuAfoB/wGkAesB+gH/AZUB5gH7Af8BiQHhAfwB/wF8AdwB/AH/AXAB1QH5Af8BZAHNAfcB/wFX
-        AcQB8wH/AUgBuQHvAf8BNAGpAecB/wELAY8BxwH/AVYBYgFqAf8MAAG+AakBmgH/Af4B/AH7Af8B/QH5
+        Af8B9AHeAdMB/wHzAdoBzQH/AbcBogGTAf8BaQFPATsB/xgAAZ4BhwF9Gf8B8wHvAewB/wGBAWkBVgH/
+        EAABcAFxAcUB/wFwAXEBxQH/BAABjAGNAdQB/wI6AbIB/wJTAbwB/wgAAt0B8gH/BAAChAHQAf8CKQGs
+        Af8CKQGsAf8CaQHEAf8EAAGDAZUBnwH/Ab4B8AH5Af8BqwHwAfcB/wGlAewB+wH/AZgB5wH7Af8BiQHh
+        AfwB/wGBAd0B+wH/AXcB1QH5Af8BawHNAfcB/wFeAcQB8wH/AVEBuwHwAf8BQwGyAewB/wEyAaQB4wH/
+        ARIBigG/Af8BTwFZAWIB/wwAAboBpQGWAf8B/QH5AfYB/wHqAZkBeAH/AeoBjwFnAf8B6gGDAVUB/wHn
+        AX4BRgH/Ad4BdQE8Af8B0gFsATUB/wHBAWMBMQH/AfUB3wHTAf8BtwGiAZMB/wFpAU8BOwH/GAABpAGO
+        AYEB/wHMAboBrQH/AbcBogGTAf8BrwGaAYsB/wGnAZEBgQH/AZ8BiQF/Af8BmAGBAXYB/wGRAYABbwH/
+        AYEBbwFcAf8QAAGrAawB3gH/AtcB8AH/AngByQH/AikBrAH/AikBrAH/AkoBuAH/BAACgQHOAf8CMAGu
+        Af8BqwGsAd4B/wLdAfIB/wIwAa4B/wIpAawB/wGrAawB3gH/BAABhgGZAaMB/wG+AfAB+QH/AbYB7QH4
+        Af8BsAHuAfoB/wGkAesB+gH/AZUB5gH7Af8BiQHhAfwB/wGBAdwB/AH/AXcB1QH5Af8BawHNAfcB/wFe
+        AcQB8wH/AU8BuQHvAf8BOwGpAecB/wESAY8BxwH/AV0BaQFxAf8MAAG+AakBmgH/Af4B/AH7Af8B/QH5
         AfgB/wH9AfcB9AH/AfwB9AHwAf8B+wHxAe0B/wH6Ae4B6AH/AfgB6gHkAf8B9wHnAd8B/wH2AeIB2gH/
-        AbcBogGTAf8BYgFIATQB/xgAAakBlAGFBf8B+wHwAesB/wH6Ae8B6QH/AfoB7QHoAf8B+QHsAeYB/wH5
-        AesB5AH/Ac0BuQGuAf8BhwFuAVwB/xQAAt0B8gH/AikBrgH/AiIBrAH/AiIBrAH/ArUB4wH/AuQB9QH/
-        AikBrgH/Ah0BqgH/AkMBuAH/BAACpQHdAf8CpQHdAf8IAAGJAZwBpgH/Ab4B8AH5Af8BtgHtAfgB/wG2
-        Ae0B+AH/AasB8AH3Af8BogHsAfoB/wGVAeYB+wH/AYkB4QH8Af8BfAHcAfwB/wFuAdMB+gH/AWIBzAH3
-        Af8BVAHDAfMB/wFIAbkB7wH/ARgBmQHPAf8BYgFvAXkB/wwAAcMBrgGeAf8D/gH/AeoBmgFwAf8B6gGP
-        AV8B/wHqAYQBTgH/AeYBdwE+Af8B3wFuATUB/wHSAWUBLwH/AcEBXAEpAf8B+AHoAd8B/wG3AaIBkwH/
-        AWIBSAE0Af8YAAGwAZsBjBn/AfMB7wHsAf8BjgF1AWMB/xgAAjkBtAH/Ah0BqgH/AjkBtAH/BAABqwGs
-        Ad4B/wIiAawB/wIiAawB/wIpAa4B/wQAAoQB0AH/ApsB2QH/CAABiwGgAagB/wG+AfAB+QH/Ab4B8AH5
-        Af8BvgHwAfkB/wG+AfAB+QH/AbQB8gH4Af8BqgHsAfsB/wGgAekB+wH/AZUB5QH8Af8BigHfAfwB/wF+
-        AdgB+wH/AXMB0gH4Af8BZwHKAfQB/wFcAcAB8QH/AWIBbwF5Af8MAAHIAbIBowr/Af0B/AH/Af0B+wH5
-        Af8B/QH5AfYB/wH8AfUB8gH/AfsB8gHuAf8B+wHvAeoB/wH5AewB5gH/AbcBogGTAf8BYgFIATQB/xgA
+        AbcBogGTAf8BaQFPATsB/xgAAakBlAGFBf8B+wHwAesB/wH6Ae8B6QH/AfoB7QHoAf8B+QHsAeYB/wH5
+        AesB5AH/Ac0BuQGuAf8BhwF1AWMB/xQAAt0B8gH/AjABrgH/AikBrAH/AikBrAH/ArUB4wH/AuQB9QH/
+        AjABrgH/AiQBqgH/AkoBuAH/BAACpQHdAf8CpQHdAf8IAAGJAZwBpgH/Ab4B8AH5Af8BtgHtAfgB/wG2
+        Ae0B+AH/AasB8AH3Af8BogHsAfoB/wGVAeYB+wH/AYkB4QH8Af8BgQHcAfwB/wF1AdMB+gH/AWkBzAH3
+        Af8BWwHDAfMB/wFPAbkB7wH/AR8BmQHPAf8BaQF2AYAB/wwAAcMBrgGeAf8D/gH/AeoBmgF3Af8B6gGP
+        AWYB/wHqAYQBVQH/AeYBfgFFAf8B3wF1ATwB/wHSAWwBNgH/AcEBYwEwAf8B+AHoAd8B/wG3AaIBkwH/
+        AWkBTwE7Af8YAAGwAZsBjBn/AfMB7wHsAf8BjgF8AWoB/xgAAkABtAH/AiQBqgH/AkABtAH/BAABqwGs
+        Ad4B/wIpAawB/wIpAawB/wIwAa4B/wQAAoQB0AH/ApsB2QH/CAABiwGgAagB/wG+AfAB+QH/Ab4B8AH5
+        Af8BvgHwAfkB/wG+AfAB+QH/AbQB8gH4Af8BqgHsAfsB/wGgAekB+wH/AZUB5QH8Af8BigHfAfwB/wGB
+        AdgB+wH/AXoB0gH4Af8BbgHKAfQB/wFjAcAB8QH/AWkBdgGAAf8MAAHIAbIBowr/Af0B/AH/Af0B+wH5
+        Af8B/QH5AfYB/wH8AfUB8gH/AfsB8gHuAf8B+wHvAeoB/wH5AewB5gH/AbcBogGTAf8BaQFPATsB/xgA
         AbUBoQGSAf8BzAG6Aa0B/wHEAbABogH/Ab0BqQGbAf8BtgGiAZIB/wGuAZkBigH/AaYBkQGBAf8BnwGI
-        AXcB/wGUAXsBaQH/GAABqwGsAd4B/wJiAcQB/wLJAesB/wQAAqUB3QH/AiIBrAH/AiIBrAH/AjkBtAH/
+        AX4B/wGUAYEBcAH/GAABqwGsAd4B/wJpAcQB/wLJAesB/wQAAqUB3QH/AikBrAH/AikBrAH/AkABtAH/
         BAACtQHjAf8BzgHPAewB/wgAAY0BoQGqAf8BjQGhAaoB/wGNAaEBqgH/AY0BoQGqAf8BjQGhAaoB/wGL
         AZ8BqAH/AYkBnAGmAf8BiQGbAaYB/wGHAZoBpAH/AYYBmQGjAf8BhAGWAaAB/wGEAZYBoAH/AYMBlQGg
-        Af8BgwGVAaAB/wF0AYQBjwH/DAABzAG2AacF/wHqAZoBcQH/AeoBjgFfAf8B6gGDAU4B/wHmAXcBPwH/
-        Ad4BbQE1Af8B/AH2AfMB/wH7AfQB7wH/AbcBogGTAf8BtwGiAZMB/wFjAUkBNQH/GAABuwGmAZcF/wH7
-        AfIB7gH/AfkB6wHlAf8B+AHlAdwB/wH1Ad8B1AH/AfMB1wHLAf8B1QG0AaQB/wGaAYMBcQH/GAACOQG0
-        Af8C3QHyAf8MAAJiAcQB/wJDAbgB/wK9AeYB/xQAAY8BpAGsAf8BsgHkAewB/wG2Ae0B+AH/AbYB7QH4
+        Af8BgwGVAaAB/wF7AYQBjwH/DAABzAG2AacF/wHqAZoBeAH/AeoBjgFmAf8B6gGDAVUB/wHmAX4BRgH/
+        Ad4BdAE8Af8B/AH2AfMB/wH7AfQB7wH/AbcBogGTAf8BtwGiAZMB/wFqAVABPAH/GAABuwGmAZcF/wH7
+        AfIB7gH/AfkB6wHlAf8B+AHlAdwB/wH1Ad8B1AH/AfMB1wHLAf8B1QG0AaQB/wGaAYMBeAH/GAACQAG0
+        Af8C3QHyAf8MAAJpAcQB/wJKAbgB/wK9AeYB/xQAAY8BpAGsAf8BsgHkAewB/wG2Ae0B+AH/AbYB7QH4
         Af8BqQHsAfYB/wGSAeEB8wH/AY0BoQGqAf8B1QHcAeAB/ygAAdEBuwGrEv8B/gH9Af8B/gL7Af8B/QH5
-        AfgB/wG3AaIBkwH/AWMBSQE1Af8BYwFJATUB/wFjAUkBNQH/GAABwwGvAaIB/wP8Ff8B8wHvAewB/wGm
+        AfgB/wG3AaIBkwH/AWoBUAE8Af8BagFQATwB/wFqAVABPAH/GAABwwGvAaIB/wP8Ff8B8wHvAewB/wGm
         AZABgQH/GAACvQHmAf8QAAK9AeYB/wHOAc8B7AH/GAAB2gHeAeEB/wGPAaQBrAH/AY8BpAGsAf8BjwGk
         AawB/wGPAaQBrAH/AY8BpAGsAf8B1QHcAeAB/ywAAdUBvwGvFv8C/gH/Af4B/AH7Af8BuQGkAZUB/wHU
-        AcUBugH/AWIBSAE0Af8BwQGyAacB/xgAAccBswGmAf8BxAGxAaMB/wHBAa4BoAH/Ab4BqwGcAf8BuwGn
-        AZgB/wG4AaMBlQH/AbQBnwGQAf8BrwGaAYwB/wGrAZYBhwH/LAACMwGyAf8CsgHiAf9gAAHYAcIBshv/
-        Af4B/wHAAasBnAH/AWIBSAE0Af8BwgGzAacB/2wAApsB2QH/ZAAB2AHCAbIB/wHYAcIBsgH/AdgBwgGy
+        AcUBugH/AWkBTwE7Af8BwQGyAacB/xgAAccBswGmAf8BxAGxAaMB/wHBAa4BoAH/Ab4BqwGcAf8BuwGn
+        AZgB/wG4AaMBlQH/AbQBnwGQAf8BrwGaAYwB/wGrAZYBhwH/LAACOgGyAf8CsgHiAf9gAAHYAcIBshv/
+        Af4B/wHAAasBnAH/AWkBTwE7Af8BwgGzAacB/2wAApsB2QH/ZAAB2AHCAbIB/wHYAcIBsgH/AdgBwgGy
         Af8B2AHCAbIB/wHYAcIBsgH/AdgBwgGyAf8B1AG+Aa4B/wHPAbkBqQH/AckBswGkAf8B4gHWAc0B/xAA
         AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAHwAQcB/AX/AfABBwH8AT8C/wHA
         AQMB8AEHAfQBBwEAAQEBwAEDAfABBwHiAQcBAAEBAcABAwHwAQcBwgEHAQABAQHAAQMB8AEHAcIBEwEA
@@ -209,25 +209,10 @@
         AQcB7wE/AQEB/wHAAQMB8AEHAf8BPwL/AcABBwP/AX8C/wHAAQ8L
 </value>
   </data>
+  <metadata name="ctmServer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>230, 17</value>
+  </metadata>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnNewTracServer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAAlRJREFUOE+F0l1M
-        UmEYB3C6b922Lppba80rVqt0a2vVqs2yqeVsbsVFaQ1qWXOVxMyJbdEHc3xJKC0cIFRM6MLQMsPVBBGs
-        pZKABFocP9JC5EPA4b9zztYF5E7vzdnzbv/f+zzvezZ5zYVdW7dvi2wpKN4Z7DUe3XG8fDD1e8pJ+EOZ
-        XWe8Laz/rYyvXDBu2rOOqBg/PlQDUQmCr9lwDbbgqek9VMZ+tOn6INH0QNxhgUhpQo6Z/cnvQ0wJrDkQ
-        I7rJ70fQdUSD/LUUiaFZYsgFfJqCtRlbJeLzFmSxjORiD6g63L8fxGIaASKFiVACrskY9D0e1N/r2KCD
-        qBxI2WiE6gRkTfhaoX4xAJnWikftZgilBvAfaHClUZELZPwV/LGXu9ezC3cxa+cAy3KErGyk5zo3HKH2
-        dmveCJZCZcR1RJEluO/mbEXpkLcdyWkpZpxNWIhkMP8rg9mlNMLkOOY3o+BcF+UC+a/U1KpH91s35Npe
-        PCZvXSg14s5DDW4IVeAJpDjLEzIDDaJn/7T+d4N6hYqaRmaAOolaAWIV/vAqfN+TmJxJwjOdhO7VCE5y
-        GpgBnkBGA14y9JUMUU84FkzgSyCBTrMTx6rrmYGLN8U0ME6FviXweSqOUX8cbm8MatMwDlXWMQPnrt2n
-        gU9UyBfHCPkDsbAZLDcbqufDOFDGYwaquM004CSDDs8KhiZW6DBLzYZC70Bx6SVmoOyCANaBITwhT2sz
-        OKDockCmt0Oms0OitWNvSQ0zUHL+Fn1Rh6vqcPD0VbJlLopOXca+E7V0OB/4Awuk/7HqHwmNAAAAAElF
-        TkSuQmCC
-</value>
-  </data>
 </root>
