--- a/VSTrac/Properties/Resources.resx
+++ b/VSTrac/Properties/Resources.resx
@@ -143,13 +143,10 @@
     <value>Add To Favourites</value>
   </data>
   <data name="MenuDelete" xml:space="preserve">
-    <value>Delete</value>
+    <value>Remove</value>
   </data>
   <data name="MenuRefresh" xml:space="preserve">
     <value>Refresh</value>
-  </data>
-  <data name="ToolbarNewServer" xml:space="preserve">
-    <value>Add new Trac server</value>
   </data>
   <data name="NodeComponents" xml:space="preserve">
     <value>Components</value>
@@ -183,5 +180,17 @@
   </data>
   <data name="refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Refresh.bmp;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ConfirmDelTracServer" xml:space="preserve">
+    <value>Are you sure you want to remove {0}?</value>
+  </data>
+  <data name="CaptionConfirmDelete" xml:space="preserve">
+    <value>Confirm Remove</value>
+  </data>
+  <data name="MenuNewServer" xml:space="preserve">
+    <value>Add New Trac Server</value>
+  </data>
+  <data name="server_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\server_new.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
